--- a/public/css/style.less
+++ b/public/css/style.less
@@ -30,7 +30,7 @@ a{
             padding-right: 0;
            
             width: 100%;
-            ul{
+            ul{f
                 width: 500px;
             }
             > #headerRight {
@@ -260,33 +260,28 @@ div.topUsers{
     /*overflow: hidden;*/
     .item{
         float: left;
-        width: 100px;
-        height: 100px;
-   
-     
+        width: 130px;
+        height: 70px;
+      
         a {
-
             img{
-           
-                width: 100px;
-                height: 100px;
-
-                 border-radius: 50px;
-                -webkit-border-radius: 150px;
-                -moz-border-radius: 150px;
-               
-                box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-                -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-                -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
             }
-            .name {
-                display: block;
-                margin-bottom: 3px;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                width: 80px;
-                font-size: 11px;
+            div.info{
+                display: inline-block;
+                width: 55px;
+                padding-left: 5px;
+                .name {
+                    display: block;
+                    margin-bottom: 3px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    width: 80px;
+                    font-size: 11px;
+                }
             }
 
         }
