--- a/public/css/style.less
+++ b/public/css/style.less
@@ -30,7 +30,7 @@ a{
             padding-right: 0;
            
             width: 100%;
-            ul{f
+            ul{
                 width: 500px;
             }
             > #headerRight {
@@ -71,7 +71,7 @@ a{
     
     li {
         margin: 0 5px;
-        padding: 0 0 8px;
+        padding: 5px 0 5px;
         float: left;
        
         list-style: none;
