--- a/public/css/style.css
+++ b/public/css/style.css
@@ -417,6 +417,52 @@ img.videoIndicator {
   margin-top: -25px;
   left: 50%;
 }
+/*sidebar*/
+.side-bar {
+  float: left;
+  font-size: 12px;
+  margin-left: 20px;
+  margin-top: 10px;
+  overflow: hidden;
+  width: 300px;
+}
+.side-bar .s-300 {
+  margin-bottom: 5px;
+  width: 300px;
+}
+.image-box,
+.video-box {
+  border-bottom: 1px solid #0087F7;
+  padding-bottom: 5px;
+  font-size: 18px;
+  margin: 0px 0px 10px;
+}
+.photoListItemSmall .thumbnail {
+  float: left;
+  max-height: 80px;
+  text-align: center;
+  width: 100px;
+}
+.photoListItemSmall .thumbnail img {
+  max-height: 75px;
+  width: 100px;
+}
+.photoListItemSmall .info {
+  margin-left: 105px;
+  float: right;
+  width: 111px;
+  margin-left: 0;
+  font-size: 14px;
+}
+.photoListItemSmall h3 {
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.photoListItemSmall:hover h3 {
+  color: #0087F7;
+}
+/*end sidebar*/
 /* profile */
 .profile-pad {
   overflow: hidden;
