--- a/public/css/style.less
+++ b/public/css/style.less
@@ -8,7 +8,9 @@ a{
         text-decoration: none;
     }
 }
-
+.error{
+    font-size: 14px; 
+}
 /*navigation*/
 #navbar {
     height: 55px;
@@ -316,7 +318,13 @@ div.uploader {
         margin-left: 10px;
     }
 }
+#sensitive_content{
 
+    display:inline; 
+    margin-right:5px; 
+    position:relative; 
+    top:2px;
+}
 .views {
     line-height: 16px;
     font-size: 14px;
