--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,11 +33,11 @@ a:hover {
   margin: 8px 0;
 }
 #navbar .navbar-header .collapse.navbar-collapse ul {
-  width: 500px;
+  width: auto;
 }
 #navbar .navbar-header .collapse.navbar-collapse > #headerRight {
   float: right;
-  width: 300px;
+  width: auto;
   height: 50px;
 }
 #navbar .navbar-header .collapse.navbar-collapse > #headerRight #login {
@@ -617,12 +617,13 @@ img.videoIndicator {
     display: none;
   }
   .video a img {
-    width: 460px;
-    height: 345px;
+    /*width: 460px;*/
+    /*height: 345px;*/
+    width: 100%;
   }
 }
 /*phone*/
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   #navbar .navbar-header .collapse {
     display: block;
     visibility: visible;
@@ -646,8 +647,21 @@ img.videoIndicator {
     padding-left: 5px;
     padding-right: 5px;
   }
+  #topUserContent,
+  #moving-boxes {
+    display: none;
+  }
   .video a img {
-    width: 270px;
-    height: 203px;
+    width: 100%;
+  }
+}
+/*tablet*/
+@media only screen and (min-width: 600px) and (max-width: 800px) {
+  .video a img {
+    width: 100%;
+  }
+  #topUserContent,
+  #moving-boxes {
+    display: none;
   }
 }
