--- a/public/css/style.less
+++ b/public/css/style.less
@@ -33,11 +33,11 @@ a{
            
             width: 100%;
             ul{
-                width: 500px;
+                width: auto;
             }
             > #headerRight {
                 float: right;
-                width: 300px;
+                width: auto;
                 height: 50px;
                 #login{
                     margin-top: 15px;
@@ -737,8 +737,9 @@ img.videoIndicator {
     .video{
 
         a img{
-            width: 460px;
-            height: 345px;
+            /*width: 460px;*/
+            /*height: 345px;*/
+            width: 100%;
         }
        
     }
@@ -747,8 +748,8 @@ img.videoIndicator {
 
 /*phone*/
 @media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px){
+  and (min-width: 320px) 
+  and (max-width: 480px){
 
     #navbar .navbar-header .collapse {
        
@@ -782,14 +783,29 @@ img.videoIndicator {
         }
 
     }
-
+    #topUserContent, #moving-boxes{
+        display: none;
+    }
     .video{
         a img{
-            width: 270px;
-            height: 203px;
+           width: 100%;
         }
 
        
     }
 }
 
+/*tablet*/
+@media only screen 
+  and (min-width: 600px) 
+  and (max-width: 800px){
+
+    .video{
+        a img{
+            width: 100%;
+        }
+    }
+    #topUserContent, #moving-boxes{
+        display: none;
+    }
+}
