--- a/public/css/style.less
+++ b/public/css/style.less
@@ -715,6 +715,14 @@ img.videoIndicator {
 }
 
 /* end profile */
+
+.fb-comments{
+    iframe{
+        width: 700px !important;
+    }
+}
+
+
 /*laptop*/
 @media screen 
   and (min-device-width: 1200px) 
@@ -792,6 +800,11 @@ img.videoIndicator {
         }
 
        
+    }
+    .fb-comments{
+        iframe{
+            width: 300px !important;
+        }
     }
 }
 
