--- a/public/css/style.less
+++ b/public/css/style.less
@@ -539,6 +539,8 @@ ul.tagit li.tagit-choice .tagit-close{
 }
 #moving-boxes{
     width: 80%;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 ul.topUsersSort {
     float: right;
